Fixed alignment issue of crate mix button in mymixes page

--- a/public/stylesheets/coke_messenger/messenger.css
+++ b/public/stylesheets/coke_messenger/messenger.css
@@ -359,3 +359,4 @@ h3.busq_titulo{font-size:18px;color:#343434;width:48%;float:left;padding-left:5p
 .copy_mix_layer_save_btn { color:#ffffff; position:relative; top:8px; }
 .gender_class{ color: #979797; font-size: 12px; padding-bottom: 10px; }
 .gender_div{ padding-bottom: 10px; }
+.create_mix_btn{ float: right;  margin: 10px 15px 10px 28px;}
